# sw_daq_tofpet2

./: .gitignore  CMakeLists.txt  INSTALL_DRIVERS.sh  INSTALL_SW_REQUIREMENTS_CENTOS.sh  INSTALL_SW_REQUIREMENTS_CENTOS7.sh  INSTALL_SW_REQUIREMENTS_CENTOS8.sh  LICENSE  README.md  config.ini  config_example.ini  configuration.template.sh  petsys-setup  petsys-setup.sh  psDrawCTR.C  requirements.txt
petsys_tables/: febd_gbe_trigger_map.tsv  febd_tofpet2_fem128_fake_channel_map.tsv  febd_tofpet2tb_fake_channel_map.tsv  pab_tofpet2tb_fake_channel_map.tsv
src/base/: CoarseSorter.cpp  CoarseSorter.hpp  CoincidenceGrouper.cpp  CoincidenceGrouper.hpp  DataFileWriter.cpp  DataFileWriter.hpp  Event.hpp  EventBuffer.hpp  EventSourceSink.hpp  HwTriggerSimulator.cpp  HwTriggerSimulator.hpp  Instrumentation.cpp  Instrumentation.hpp  OrderedEventHandler.hpp  OverlappedEventHandler.hpp  OverlappedEventHandler.tpp  ProcessHit.cpp  ProcessHit.hpp  SimpleGrouper.cpp  SimpleGrouper.hpp  SystemConfig.cpp  SystemConfig.hpp  ThreadPool.cpp  ThreadPool.hpp  UnorderedEventHandler.hpp
src/daqd/: Client.cpp  Client.hpp  DAQFrameServer.cpp  DAQFrameServer.hpp  DtFlyP.cpp  DtFlyP.hpp  FrameServer.cpp  FrameServer.hpp  PFP_KX7.cpp  PFP_KX7.hpp  Protocol.hpp  UDPFrameServer.cpp  UDPFrameServer.hpp  daqd.cpp
src/gui/: gui_layout.glade  gui_layout_ubuntu.glade  start_gui
src/kernel/: Makefile  dkms.conf  psdaq.c  psdaq.h
src/online_monitor/: Histogram1D.cpp  Histogram1D.hpp  Monitor.cpp  Monitor.hpp  SingleValue.cpp  SingleValue.hpp  launch_monitor  monitor_py.cpp  online_monitor.cpp  online_process.cpp
src/petsys_py_lib/: __init__.py  bias.py  bitarray_utils.py  boot.py  config.py  daqd.py  fe_eeprom.py  fe_power.py  fe_power_8k.py  fe_temperature.py  i2c.py  info.py  spi.py  tofpet2.py  tofpet2b.py  tofpet2c.py
src/petsys_tables/: pab_tofpet2tb_fake_channel_map.tsv  pab_trigger_map.tsv
src/petsys_util/: SI5326_config.txt  acquire_fetp_scan  acquire_qdc_calibration  acquire_qdc_calibration_fixed  acquire_sipm_data  acquire_sipm_data_basic  acquire_sipm_data_scan  acquire_sipm_data_with_monitoring  acquire_sipm_data_with_processing  acquire_tdc_calibration  acquire_threshold_calibration  analyze_asic_quick_scan.cpp  boot_sw  calibrate_thresholds  change_calibration_topology  check_asic_links  check_clk_tgr_links  convert.sh  convert_raw_to_coincidence.cpp  convert_raw_to_group.cpp  convert_raw_to_raw.cpp  convert_raw_to_root.cpp  convert_raw_to_singles.cpp  convert_raw_to_trigger.cpp  convert_raw_to_trigger_dynamic.cpp  eeprom_write  gui_layout.glade  init_system  make_asic_mask  make_bias_calibration_table  make_bias_calibration_table_from_files  make_bias_calibration_table_from_prom  make_simple_bias_settings_table  make_simple_channel_map  make_simple_disc_settings_table  make_simple_disc_table  make_simple_energy_calibration_table  make_simple_sipm_bias_table  merge_raw.cpp  print_raw.cpp  (+19 more)
src/raw_data/: AsyncWriter.cpp  AsyncWriter.hpp  RawReader.cpp  RawReader.hpp  event_decode.hpp  shm_raw.cpp  shm_raw.hpp  shm_raw_py.cpp  write_raw.cpp
src/udev/: 52-psdaq.rules
